# kursovaya

./: .gitignore  CMakeLists.txt
include/: console_ui.h  crypto.h  password_entry.h  password_manager.h  secure_string.h
src/: console_ui.cpp  crypto.cpp  main.cpp  password_entry.cpp  password_manager.cpp  secure_string.cpp
